Improved performance by using valueOf method calls instead of contructors for Integer instances